--- a/src/main/webapp/list.jspx
+++ b/src/main/webapp/list.jspx
@@ -34,7 +34,11 @@
           
           <mm:import id="max">20</mm:import>
           <mm:import externid="offset">0</mm:import>
-
+          
+          <c:if test="${type eq 'video'}">
+            <mm:import id="type" reset="true">media</mm:import>
+          </c:if>
+          
           <mm:listnodescontainer type="${type}">
             <mm:sortorder field="number" direction="DOWN" />
             <div class="SearchTypes">
@@ -44,22 +48,55 @@
             <mm:maxnumber value="${max}" />
             <mm:offset value="${offset}" />
             <mm:listnodes>
-              <h5>${type}</h5>
+              <h5>${type eq 'media' ? 'video' : type}</h5>
               
-              <mm:link page="content">
-                <mm:frameworkparam name="component">tmf</mm:frameworkparam>
-                <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
-                <a class="medium" href="${_}"><mm:field name="title" /></a>
-              </mm:link>
+              <c:choose>
+                <c:when test="${type eq 'media'}">
+                  <mm:link page="media">
+                    <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                    <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                    
+                    <a class="medium" href="${_}">
+                      <mm:relatednodes type="picture" max="1">
+                        <mm:import id="pic" reset="true">ok</mm:import>
+                        <mm:image mode="img" width="100" />
+                        <img src="${mm:link('/style/images/play_small.png')}" class="playIcon" /><br />
+                      </mm:relatednodes>
+                      <mm:isempty referid="pic">
+                        <img src="${mm:link('/style/images/video-003.gif')}" alt="${_node.title}" width="100"  />
+                      </mm:isempty>
+                      <mm:field name="title" />
+                    </a>
+                    <mm:relatednodes type="keyword">
+                      <mm:first><br /><strong>Keywords: </strong></mm:first> 
+                      <mm:field name="keyword" /><mm:last inverse="true">, </mm:last>
+                    </mm:relatednodes>
+                    
+                  </mm:link>
+                </c:when>
+                <c:otherwise>
+                  
+                  <mm:link page="content">
+                    <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                    <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                    <mm:frameworkparam name="t">${type}s</mm:frameworkparam> <!-- TODO: replace this ugliness ! -->
+                    <a class="medium" href="${_}"><mm:field name="title" /></a>
+                  </mm:link>
               
-              <mm:field name="subtitle"><mm:isnotempty><br /><mm:write/></mm:isnotempty></mm:field>
-              <!-- <mm:relatednodes role="author" searchdir="destination" type="person">
-                <mm:first><br /></mm:first><mm:first inverse="true">, </mm:first><mm:field name="firstname"/> <mm:field name="prefix"/> <mm:field name="sirname"/>
-                </mm:relatednodes> -->
-              <mm:relatednodes type="keyword">
-                <mm:first><br /><b>Keywords: </b></mm:first> 
-                <mm:field name="keyword" /><mm:last inverse="true">, </mm:last>
-              </mm:relatednodes>
+                  <mm:field name="subtitle"><mm:isnotempty><br /><mm:write/></mm:isnotempty></mm:field>
+                  <mm:relatednodes type="person" role="author" searchdir="destination">
+                    <mm:first><br /></mm:first>
+                    <mm:field name="firstname"/> <mm:field name="prefix"><mm:isnotempty><mm:write /> </mm:isnotempty></mm:field><mm:field name="sirname"/><mm:last inverse="true">, </mm:last>
+                  </mm:relatednodes>
+                  <mm:relatednodes type="keyword">
+                    <mm:first><br /><strong>Keywords: </strong></mm:first> 
+                    <mm:field name="keyword" /><mm:last inverse="true">, </mm:last>
+                  </mm:relatednodes>
+                  
+                </c:otherwise>
+              </c:choose>
+              
+              
               <br /><br /><br />
             </mm:listnodes>
           </mm:listnodescontainer>
