--- a/src/main/webapp/error/404.jspx
+++ b/src/main/webapp/error/404.jspx
@@ -30,13 +30,19 @@
   <div class="ArticleContainer">
 	
 	<tmf:header-simple title="404 - Page not found" />
-
+    
     <h3><jsp:expression>org.mmbase.Version.get()</jsp:expression></h3>
-    <p>
-      The current URL (<jsp:expression>request.getAttribute("javax.servlet.error.message")</jsp:expression>) does not
-      point to an existing resource in this web-application.
+    <p>The current URL -
+      <jsp:scriptlet>
+        String msg = (String) request.getAttribute("org.mmbase.servlet.error.message");
+        if (msg == null) {
+          msg = (String) request.getAttribute("javax.servlet.error.message");
+        }
+        out.println(msg);
+      </jsp:scriptlet>
+      - does not point to an existing resource in this web-application.
     </p>
-	
+
     <div class="clearBoth"><!-- empty --></div>
   </div><!-- EOF .ArticleContainer -->
 </div><!-- EOF .GlobalContainer -->
